Commit after Completing the Customer API. TO next work on the customer's address API.