@@ -3,6 +3,7 @@ package com.shop.we.deliver.customer;
 import java.time.LocalDate;
 import java.time.Month;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;import java.util.UUID;
 
 import org.slf4j.Logger;
@@ -12,6 +13,9 @@ import org.springframework.boot.CommandLineRunner;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
+import com.shop.we.deliver.customer.entity.Address;
+import com.shop.we.deliver.customer.entity.Customer;
+import com.shop.we.deliver.customer.repository.CustomerRepository;
 
 @Configuration
 public class CustomerConfig {
@@ -66,16 +70,19 @@ public class CustomerConfig {
 			
 			Customer blessing = new Customer("Shop we Deliver", "4598093864", "shabablessing@outlook.com", "06717424906",
 					"Blessing Shaba", "shabablessing", "Mechanic");	
-			Address bless = new Address ("Testing","Test","Midrand", "England", "London");
+			Address bless = new Address ("Testing","Test","Midrand", "England", "London", blessing);
 			bless.setCustomer(blessing);
 
-			Address bless1 = new Address ("Testing","Test","Midrand", "England", "London");
+			Address bless1 = new Address ("Testing","Test","Midrand", "England", "London",blessing);
 			bless1.setCustomer(blessing);
 
-			Address bless2 = new Address ("Testing","Test","Midrand", "England", "London");
+			Address bless2 = new Address ("Testing","Test","Midrand", "England", "London",blessing);
 			bless2.setCustomer(blessing);
 			
-			blessing.getAddress().addAll(List.of(bless, bless1,bless2));
+			List <Address> bleAdd = Arrays.asList(bless1,bless2,bless);
+			blessing.setAddress(bleAdd);
+			
+			//blessing.getAddress().addAll(List.of(bless, bless1,bless2));
 			
 			
 			
